# nv9-websocket-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: bot.py  connections.py  event_handlers.py  monitors.py  repository.py
